--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   usb_serial: ^0.4.0
+  qr_code_scanner: ^1.0.1
+
+  http: ^0.13.5
+  firebase_core: ^2.4.1
+  firebase_auth: ^4.2.5
+  path_provider: ^2.0.11
+  platform_device_id: ^1.0.1
+  flutter_phoenix: ^1.1.0
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
