--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   bordered_text: ^2.0.0
   audioplayers: ^3.0.1
   confetti: ^0.7.0
+  ffi: ^2.0.1
+  permission_handler: ^10.1.0
 
 dev_dependencies:
   flutter_test:
