--- a/ios/Flutter/Debug.xcconfig
+++ b/ios/Flutter/Debug.xcconfig
@@ -1,2 +1,4 @@
 #include? "Pods/Target Support Files/Pods-Runner/Pods-Runner.debug.xcconfig"
 #include "Generated.xcconfig"
+
+GOOGLE_SERVICE_REVERSED_CLIENT_ID = com.googleusercontent.apps.14528352544-urh4cej53mqrp6a6n60paqjnf26g4aq8
