--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   ffi: ^2.0.1
   permission_handler: ^10.1.0
   flutter_svg: ^1.1.6
+  cool_alert: ^1.1.0
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
