--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 15 18:23:07 CST 2023
-sdk.dir=C\:\\Users\\Alex Yu\\AppData\\Local\\Android\\Sdk
+#Thu Mar 16 12:42:59 HKT 2023
+sdk.dir=/Users/eda/Library/Android/sdk
