--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
 
   flutter_localizations:
     sdk: flutter
-  easy_localization: ^3.0.1
+  easy_localization: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -49,8 +49,10 @@ dependencies:
 
   http: ^0.13.5
 
-  firebase_core: ^2.4.1
-  firebase_auth: ^4.2.5
+  intl: ^0.18.0-nullsafety.2
+  firebase_core: ^2.8.0
+  firebase_auth: ^4.2.0
+  firebase_auth_web: ^5.2.2
   path_provider: ^2.0.11
   shared_preferences: ^2.0.17
   percent_indicator: ^4.0.1
