--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
 
   http: ^0.13.5
 
-  intl: ^0.18.0-nullsafety.2
+  intl: ^0.17.0
   firebase_core: ^2.8.0
   firebase_auth: ^4.2.0
   firebase_auth_web: ^5.2.2
