--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:14528352544:ios:c2b80011f7695073a80745",
-  "FIREBASE_PROJECT_ID": "fypqrcode-e4d02",
-  "GCM_SENDER_ID": "14528352544"
+  "GOOGLE_APP_ID": "1:44694107862:ios:a0a563bef9d3a28b6dfb77",
+  "FIREBASE_PROJECT_ID": "fantahealth-1f00b",
+  "GCM_SENDER_ID": "44694107862"
 }
