--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  camera: ^0.9.4+1
-  sensors_plus: ^1.4.1
+  camera: ^0.10.4
+  sensors_plus: ^2.0.3
   usb_serial: ^0.4.0
   platform_device_id: ^1.0.1
 
@@ -60,18 +60,18 @@ dependencies:
   percent_indicator: ^4.0.1
   widget_and_text_animator: ^1.0.9
   bordered_text: ^2.0.0
-  audioplayers: ^3.0.1
+  audioplayers: ^4.0.1
   confetti: ^0.7.0
-  flutter_svg: ^1.1.6
+  flutter_svg: ^2.0.5
   ffi: ^2.0.1
   permission_handler: ^10.1.0
 
-  cool_alert: ^1.1.0
+  cool_alert: ^2.0.1
 
   simple_kalman: ^1.0.1
   email_validator: ^2.1.17
 
-  flutter_launcher_icons: ^0.12.0
+  flutter_launcher_icons: ^0.13.0
 
 dev_dependencies:
   flutter_test:
