--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,7 +106,10 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/images/background.png
+    - assets/images/background.jpg
+    - assets/images/blue-square.jpg
+    - assets/images/blue-square2.jpg
+    - assets/images/blue-square3.jpg
     - images/button_icon.jpg
     - assets/
     - assets/images/
